# proyecto_arus_percepcion

./: CMakeLists.txt  README.md  main.cpp  saved_pointcloud.pcd
